--- a/features/tailormade_auth/src/main/res/layout/fragment_sign_in.xml
+++ b/features/tailormade_auth/src/main/res/layout/fragment_sign_in.xml
@@ -83,10 +83,8 @@
                 android:id="@+id/text_input_password_sign_in"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_8"
                 android:hint="@string/password_label"
-                app:endIconCheckable="true"
-                app:endIconDrawable="@drawable/ic_visibility_off"
+                app:endIconMode="password_toggle"
                 app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -101,7 +99,7 @@
                 android:id="@+id/button_sign_in"
                 style="@style/Theme.TailorMade.Button.Rounded"
                 android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/dp_40"
+                android:layout_marginTop="@dimen/dp_48"
                 android:text="@string/sign_in_label" />
 
         </LinearLayout>
@@ -110,7 +108,6 @@
             android:id="@+id/linear_layout_go_to_sign_up"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_32"
             android:gravity="center|center_horizontal"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
