--- a/features/tailormade_auth/src/main/res/layout/fragment_sign_up.xml
+++ b/features/tailormade_auth/src/main/res/layout/fragment_sign_up.xml
@@ -16,7 +16,7 @@
                 android:id="@+id/linear_layout_title"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_100"
+                android:layout_marginTop="@dimen/dp_48"
                 android:orientation="vertical"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +25,7 @@
 
                 <TextView
                     android:id="@+id/text_view_title"
-                    style="@style/TextAppearance.TailorMade.Headline3"
+                    style="@style/TextAppearance.TailorMade.Headline3.Bold"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/get_started_label" />
@@ -137,7 +137,7 @@
                 android:id="@+id/linear_layout_go_to_sign_in"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_50"
+                android:layout_marginTop="@dimen/dp_40"
                 android:gravity="center|center_horizontal"
                 android:orientation="horizontal"
                 app:layout_constraintTop_toBottomOf="@id/linear_layout_sign_up_form"
