--- a/features/tailormade_auth/src/main/res/layout/fragment_sign_in.xml
+++ b/features/tailormade_auth/src/main/res/layout/fragment_sign_in.xml
@@ -27,107 +27,99 @@
             app:layout_constraintStart_toEndOf="@id/image_tailormade"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/linear_layout_sign_in_info"
+        <TextView
+            android:id="@+id/text_view_title"
+            style="@style/TextAppearance.TailorMade.Headline3.Bold"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_64"
-            android:orientation="vertical"
+            android:text="@string/welcome_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/text_tailormade">
+            app:layout_constraintTop_toBottomOf="@id/text_tailormade" />
 
-            <TextView
-                android:id="@+id/text_view_title"
-                style="@style/TextAppearance.TailorMade.Headline3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/welcome_label" />
-
-            <TextView
-                android:id="@+id/text_view_description"
-                style="@style/TextAppearance.TailorMade.Body2.BlackHigh"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/dp_4"
-                android:text="@string/enter_email_password_label" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linear_layout_sign_in_form"
+        <TextView
+            android:id="@+id/text_view_description"
+            style="@style/TextAppearance.TailorMade.Body2.BlackHigh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:layout_marginTop="@dimen/dp_4"
+            android:text="@string/enter_email_password_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_view_title" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/text_input_email_sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/email_label"
+            app:errorEnabled="true"
+            app:layout_constraintBottom_toTopOf="@id/text_input_password_sign_in"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_email_sign_in"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textEmailAddress" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/text_input_password_sign_in"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/password_label"
+            app:endIconMode="password_toggle"
+            app:errorEnabled="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/text_input_email_sign_in"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_text_password_sign_in"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/email_label"
-                app:errorEnabled="true">
+                android:inputType="textPassword" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_text_email_sign_in"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-            </com.google.android.material.textfield.TextInputLayout>
+        <Button
+            android:id="@+id/button_sign_in"
+            style="@style/Theme.TailorMade.Button.Rounded"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/dp_48"
+            android:text="@string/sign_in_label"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/text_input_password_sign_in" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/text_input_password_sign_in"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/password_label"
-                app:endIconMode="password_toggle"
-                app:errorEnabled="true">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/edit_text_password_sign_in"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:inputType="textPassword" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <Button
-                android:id="@+id/button_sign_in"
-                style="@style/Theme.TailorMade.Button.Rounded"
-                android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/dp_48"
-                android:text="@string/sign_in_label" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/linear_layout_go_to_sign_up"
-            android:layout_width="@dimen/dp_0"
+        <TextView
+            android:id="@+id/text_go_to_sign_up_label"
+            style="@style/TextAppearance.TailorMade.Body1.BlackHigh"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center|center_horizontal"
-            android:orientation="horizontal"
+            android:text="@string/no_account_label"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/button_go_to_sign_up"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/button_go_to_sign_up" />
+
+        <Button
+            android:id="@+id/button_go_to_sign_up"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sign_up_label"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/text_go_to_sign_up_label" />
 
-            <TextView
-                android:id="@+id/text_go_to_sign_up_label"
-                style="@style/TextAppearance.TailorMade.Body1.BlackHigh"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/no_account_label" />
-
-            <Button
-                android:id="@+id/button_go_to_sign_up"
-                style="@style/Widget.MaterialComponents.Button.TextButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_up_label" />
-
-        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
