SETUP-EDIT-PROFILE: Setup toolbar and location autocomplete

--- a/features/tailormade_profile/src/main/res/layout/activity_edit_profile.xml
+++ b/features/tailormade_profile/src/main/res/layout/activity_edit_profile.xml
@@ -16,6 +16,7 @@
 
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/top_toolbar_profile"
+                style="@style/Theme.TailorMade.Toolbar.Back"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize" />
 
