--- a/libraries/tailormade_dls/src/main/res/values/styles.xml
+++ b/libraries/tailormade_dls/src/main/res/values/styles.xml
@@ -291,4 +291,19 @@
     <style name="Theme.TailorMade.TextInputEditText" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
         <item name="boxBackgroundColor">?colorSurface</item>
     </style>
+
+    <style name="Theme.TailorMade.TextInputEditText.Dropdown" parent="Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">
+        <item name="boxBackgroundColor">?colorSurface</item>
+    </style>
+
+    <!-- Toolbar -->
+    <style name="Theme.TailorMade.Toolbar" parent="Widget.MaterialComponents.Toolbar.Surface">
+        <item name="titleTextAppearance">?textAppearanceHeadline4</item>
+        <item name="titleTextColor">?colorOnBackground</item>
+    </style>
+
+    <style name="Theme.TailorMade.Toolbar.Back" parent="Theme.TailorMade.Toolbar">
+        <item name="navigationIcon">@drawable/ic_back</item>
+        <item name="navigationIconColor">?colorOnBackground</item>
+    </style>
 </resources>
