--- a/features/tailormade_profile/src/main/res/layout/edit_profile_fragment.xml
+++ b/features/tailormade_profile/src/main/res/layout/edit_profile_fragment.xml
@@ -66,21 +66,21 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/text_input_location_edit_profile"
+            style="@style/Theme.TailorMade.TextInputEditText.Dropdown"
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_12"
             android:hint="@string/location_label"
-            app:endIconDrawable="@drawable/ic_location"
-            app:endIconMode="custom"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/text_input_birth_date_edit_profile">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
                 android:id="@+id/edit_text_location_edit_profile"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                tools:ignore="LabelFor" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
