SETUP-EDIT-PROFILE: Add api call and core to profile

--- a/libraries/tailormade_dls/src/main/res/values-night/themes.xml
+++ b/libraries/tailormade_dls/src/main/res/values-night/themes.xml
@@ -32,7 +32,7 @@
         </item>
         <item name="textAppearanceSubtitle1">
             @style/TextAppearance.TailorMade.Subtitle1
-        </item>
+        </item>d
         <item name="textAppearanceSubtitle2">
             @style/TextAppearance.TailorMade.Subtitle2
         </item>
