--- a/features/tailormade_profile/src/main/res/navigation/nav_profile_graph.xml
+++ b/features/tailormade_profile/src/main/res/navigation/nav_profile_graph.xml
@@ -7,4 +7,8 @@
         android:id="@+id/editProfileFragment"
         android:name="com.future.tailormade_profile.feature.editProfile.view.EditProfileFragment"
         android:label="EditProfileFragment" />
+    <fragment
+        android:id="@+id/editAboutFragment"
+        android:name="com.future.tailormade_profile.feature.editAbout.view.EditAboutFragment"
+        android:label="EditAboutFragment" />
 </navigation>
