SETUP-EDIT-PROFILE: Fix comments

--- a/features/tailormade_profile/src/main/res/layout/fragment_edit_profile_set_location.xml
+++ b/features/tailormade_profile/src/main/res/layout/fragment_edit_profile_set_location.xml
@@ -2,10 +2,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         tools:context=".feature.editProfile.view.EditProfileSetLocationFragment">
 
         <org.osmdroid.views.MapView
@@ -13,5 +12,5 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-    </LinearLayout>
+    </FrameLayout>
 </layout>
